--- a/BelajarYok.Android/BelajarYok.Android.csproj
+++ b/BelajarYok.Android/BelajarYok.Android.csproj
@@ -63,6 +63,9 @@
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.8.116</Version>
     </PackageReference>
+    <PackageReference Include="SQLiteNetExtensions.Async">
+      <Version>2.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.CommunityToolkit">
       <Version>2.0.6</Version>
     </PackageReference>
