--- a/BelajarYok.Android/BelajarYok.Android.csproj
+++ b/BelajarYok.Android/BelajarYok.Android.csproj
@@ -60,6 +60,9 @@
     <PackageReference Include="PropertyChanged.Fody">
       <Version>4.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.1.0</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.8.116</Version>
     </PackageReference>
